--- a/js/style.css
+++ b/js/style.css
@@ -1,11 +1,34 @@
 .log {
   position: relative;
+  padding: 0;
+  margin-left: 50px;
+  margin-top: 50px;
 }
+
+/* .log:hover:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  z-index: 100;
+} */
 
 .log__log {
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 0;
+  opacity: .5;
+  transition: opacity .5s;
+}
+
+.log__log_active {
+  z-index: 10;
+  opacity: 1;
 }
 
 .file__list {
@@ -22,4 +45,9 @@
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
   border-radius: 5px;
   user-select: none;
+  transition: box-shadow .3s;
+}
+
+.file__item_active {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, .3);
 }
